# curvature-filtrations

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: black_formatting.yaml  ci.yaml  docs.yaml  publish_to_pypi.yaml
cfggme/: __init__.py  basic_test.py  compare.py  curvature.py  curvature_test.py  kilt.py  methods.py  sr.py  testing.py  topology.py  utils.py
cfggme/geometry/: curvature.py
cfggme/topology/: distances.py
curvature_filtrations/: __init__.py  compare.py  kilt.py
curvature_filtrations/geometry/: measures.py
curvature_filtrations/topology/: distances.py  ph.py  representations.py
docs/source/: compare.rst  conf.py  geometry.rst  index.rst  kilt.rst  topology.rst
docs/source/geometry/: measures.rst
docs/source/topology/: distances.rst  ph.rst  representations.rst
notebooks/: bagpipeline.ipynb  custom_compare.ipynb  utils.py
scott/: __init__.py  compare.py  kilt.py
scott/geometry/: measures.py
scott/geometry/measures/: __init__.py  forman.py  ollivier.py  resistance.py
scott/topology/: distances.py  ph.py  representations.py
scott/topology/distances/: __init__.py  base.py  image.py  landscape.py
scott/topology/representations/: __init__.py  diagram.py  image.py  landscape.py
scripts/: example.py  sr.py  utils.py
source/: conf.py  index.rst
tests/: compare_test.py  conftest.py  curvature_test.py  object_test.py  test.py  test_compare.py  test_curvature.py  test_diagram.py  test_kilt.py
tests/geometry/: conftest.py  test_measures.py
tests/topology/: conftest.py  test_distances.py  test_ph.py  test_representations.py
