[tool.poetry]
name = "scott"
version = "0.1.0"
description = "SCOTT: Studying Curvature Operations and Topology Toolkit"
authors = ["Jeremy Wayland <jeremy.don.wayland@gmail.com>", "Emily Simons<emsimons4@gmail.com>", "Bastian Rieck <bastian@rieck.me>"]
license = "BSD 3-Clause License"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10"
gudhi = "^3.10.1"
networkx = "^3.4.2"
pot = "^0.9.5"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
