[project]
name = "curvature-filtrations"
version = "0.1.1"
description = "SCOTT: Synthesizing Curvature Operations and Topology Tools. Use curvature filtrations for graphs and graph distributions!"
authors = [
    { name = "Jeremy Wayland", email = "jeremy.don.wayland@gmail.com" },
    { name = "Emily Simons", email = "emsimons4@gmail.com" },
    { name = "Bastian Rieck", email = "bastian@rieck.me" },
]
license = { text = "BSD 3-Clause License" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gudhi>=3.11.0",
    "networkx>=3.4.2",
    "pot>=0.9.5",
    "scikit-learn>=1.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
]
docs = [
    "furo>=2024.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scott"]

[tool.black]
line-length = 100
